Bug Fixes
Fixed GWP values add issue
Activity can not add without GWP settings issue fixed
Reporting page title misalignment issue fixed
side nav bar height modified
emission page sorting issue fixed
fixed unit test issues

--- a/web/src/Components/Sider/layout.sider.scss
+++ b/web/src/Components/Sider/layout.sider.scss
@@ -78,7 +78,7 @@
     .sider-menu-container {
 
       overflow-y: auto;
-      max-height: 70vh;
+      max-height: 80vh;
       padding-top: 10px;
       padding-right: 8px;
 
